--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,28 +1,28 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
-<form method="POST">
-  <h3 align="center">Login</h3>
-  <div class="form-group">
-    <label for="email">Email Address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email"
-      name="email"
-      placeholder="Enter email"
-    />
+<style>  
+  .loginForm {
+    padding-left: 48px;
+  }
+
+</style>
+
+<h3 align="center" style="margin: 13px auto; margin-bottom: 33px;">Login</h3>
+<form method="POST" class="Form loginForm" style="display: flex; align-items: center; justify-content: space-between; width: 96%; max-width: 800px;">
+  <div class="left">
+    <div class="form-group">
+      <label for="email">Email Address :</label>
+      <input type="email" id="email" name="email" placeholder="Enter email" />
+    </div>
+    <div class="form-group">
+      <label for="password">Password :</label>
+      <input type="password" id="password" name="password" placeholder="Enter password" />
+    </div>
+    <br />
+    <button class="btn btn-primary formBtn">Login</button>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      name="password"
-      placeholder="Enter password"
-    />
+  <div class="right">
+    <img src="{{ url_for('static', filename='./login.jpg') }}" alt="img" style="width: 100%; height: 100%;">
   </div>
-  <br />
-  <button type="submit" class="btn btn-primary">Login</button>
 </form>
 {% endblock %}
