--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,48 +1,48 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
 content %}
-<form method="POST">
-  <h3 align="center">Sign Up</h3>
-  <div class="form-group">
-    <label for="email">Email Address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email"
-      name="email"
-      placeholder="Enter email"
-    />
+<style>
+  .right{
+    height: 480px;
+    width: 450px;
+  }
+
+  .signUPForm{
+    padding-right: 48px;
+    height: max-content;
+  }
+
+  .form-group{
+    gap: 5px;
+  }
+</style>
+
+
+<h3 align="center" style="margin: 13px auto; margin-bottom: 33px;">Sign Up</h3>
+<form method="POST" class="Form signUPForm" style="display: flex; align-items: center; justify-content: space-between; flex-direction: row-reverse;">
+  <div class="left">
+
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" placeholder="Enter email" />
+    </div>
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input type="text" id="firstName" name="firstName" placeholder="Enter first name" />
+    </div>
+    <div class="form-group">
+      <label for="password1">Password</label>
+      <input type="password" id="password1" name="password1" placeholder="Enter password" />
+    </div>
+    <div class="form-group">
+      <label for="password2">Password (Confirm)</label>
+      <input type="password" id="password2" name="password2" placeholder="Confirm password" />
+    </div>
+    <br />
+    <button class="btn btn-primary formBtn">Submit</button>
+
   </div>
-  <div class="form-group">
-    <label for="firstName">First Name</label>
-    <input
-      type="text"
-      class="form-control"
-      id="firstName"
-      name="firstName"
-      placeholder="Enter first name"
-    />
+  <div class="right">
+    <img src="{{ url_for('static', filename='./signup.jpeg')}}" alt="signUp" style="width: 100%; height: 100%;">
   </div>
-  <div class="form-group">
-    <label for="password1">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password1"
-      name="password1"
-      placeholder="Enter password"
-    />
-  </div>
-  <div class="form-group">
-    <label for="password2">Password (Confirm)</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password2"
-      name="password2"
-      placeholder="Confirm password"
-    />
-  </div>
-  <br />
-  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
